style.css
body {
    display:flex;
    flex-direction:column;
    margin:0px;
}

.header,
.footer {
    display:flex;
    background-color:#1F2937;
    color:white;
    align-items:center;
    flex-direction:row;
}

.header {
    justify-content:space-between;
}

.footer {
    justify-content:center;
}

.header ul {
    list-style: none;
    display:flex;
    flex-direction:row;
    gap:16px;
    padding-inline-end: 1em;
}

a {
    text-decoration: none;
    color:white;
}

.header-logo {
    padding-inline-start:1em;
    font-size: 24px;
}

.content {
    display:flex;
    flex-direction:column;
}

.box-one {
    display:flex;
}

.box-two {
    display:flex;
}

.box-three {
    display:flex;
}

.box-four {
    display:flex;
    background:#3882F6;
    color:white;
}

.four-text{
    display:flex;
    flex-direction:column;
}

button {
    background:#3882F6;
    color:white;
    border-radius:10px;
}

